Comprehensive environment configuration refactoring (Profiles, CORS, ConfigValidator, Dotenv)